# wumixos

./: .gitignore  .travis.yml  Cargo.toml  README.md  web-build.sh
code/: hack.bas
src/: lib.rs  main.rs  webmachine.rs
src/bins/: decrypt.rs  machine.rs  term.rs  web.rs
static/: front.xcf  index.html  styles.css
static/machine/: machine.d  machine.js  machine.wasm
utilities/: passwords.scm  roman.scm
